# dynamic_obstacle_avoidance_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  examples_animation.py  examples_vectorField.py  requirements-pip.txt
c++/: CMakeLists.txt
c++/include/DynamicObstacleAvoidance/: Agent.hpp  Modulation.hpp  agent.hpp  modulation.hpp  obstacle.hpp
c++/include/DynamicObstacleAvoidance/Obstacle/: Ellipsoid.hpp  Ellipsoid2D.hpp  Obstacle.hpp
c++/include/DynamicObstacleAvoidance/State/: Pose.hpp  State.hpp
c++/src/: Agent.cpp  Modulation.cpp  agent.cpp  modulation.cpp  obstacle.cpp
c++/src/Obstacle/: Ellipsoid.cpp  Ellipsoid2D.cpp  Obstacle.cpp
c++/src/State/: State.cpp
c++/tests/: testEllipsoid2DObstacle.cpp  testModulation.cpp  testObstacle.cpp  test_modulation.cpp
graphical_interface/: interface_obstacleAvoidance.py
include/DynamicObstacleAvoidance/: Agent.hpp  Environment.hpp  Modulation.hpp
include/DynamicObstacleAvoidance/Exceptions/: ObstacleAlreadyExistsException.hpp  ObstacleNotInEnvironmentException.hpp
include/DynamicObstacleAvoidance/Obstacle/: Aggregate.hpp  Ellipsoid.hpp  Ellipsoid2D.hpp  LaserScan2D.hpp  Obstacle.hpp  PointCloud.hpp  PointCloudToObstacle.hpp  StarShapeHull.hpp
include/DynamicObstacleAvoidance/Regression/: Polynomial.hpp
include/DynamicObstacleAvoidance/State/: Pose.hpp  State.hpp
include/DynamicObstacleAvoidance/Utils/: MathTools.hpp  VectorTools.hpp
include/DynamicObstacleAvoidance/Utils/Clustering/: DBSCAN.hpp  Kmedoids.hpp  Meanshift.hpp
include/DynamicObstacleAvoidance/Utils/ObstacleGeneration/: Aggregation.hpp
include/DynamicObstacleAvoidance/Utils/Plotting/: PlottingTools.hpp  matplotlibcpp.hpp
lib_ds/: linearAttractor.py
lib_obstacleAvoidance/: lib_modulation.py  linear_modulations.py
lib_visualization/: animated_simulation.py  vectorField_visualization.py
python/: environment.yml  examples_animation.py  examples_vectorField.py
python/fig/: README.md
python/lib_obstacleAvoidance/: linear_modulations.py  obs_dynamic_center_3d.py
python/lib_visualization/: animated_simulation.py  vectorField_visualization.py
python/notebook/: Tutorial_ObstacleAvoidance.ipynb
python/scripts/: examples_animation.py
python/src/dynamic_obstacle_avoidance/obstacle_avoidance/: linear_modulations.py  modulation.py
python/src/dynamic_obstacle_avoidance/visualization/: animated_simulation.py  vector_field_visualization.py
src/: Agent.cpp  Environment.cpp  Modulation.cpp
src/Obstacle/: Aggregate.cpp  Ellipsoid.cpp  Ellipsoid2D.cpp  LaserScan2D.cpp  Obstacle.cpp  PointCloud.cpp  PointCloudToObstacle.cpp  StarShapeHull.cpp
src/Regression/: Polynomial.cpp
src/State/: Pose.cpp  State.cpp
src/Utils/: MathTools.cpp  VectorTools.cpp
src/Utils/ObstacleGeneration/: Aggregation.cpp
src/Utils/Plotting/: PlottingTools.cpp
tests/: test3D.cpp  testConfiguration.cpp  testEllipsoid2DObstacle.cpp  testEllipsoidObstacle.cpp  testEnvironment.cpp  testGuardAvoidance.cpp  testKIT.cpp  testModulation.cpp  testMovingObstacle.cpp  testOptimization.cpp  testPointCloudToObstacle.cpp  testSingleConfiguration.cpp  testState.cpp  testWall.cpp
